# FFmpeg.cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
examples/: examples.hpp  rtsp_2_mp4.cpp  save_picture_jpg.cpp  transsizing.cpp  vedio_cut.cpp
fpp/format/: InputFormatContext.cpp
